--- a/packages/home-app/tsconfig.json
+++ b/packages/home-app/tsconfig.json
@@ -1,6 +1,9 @@
 {
     "extends": "../../tsconfig.json",
     "compilerOptions": {
+        "jsx": "preserve",
+        "jsxFactory": "h",
+        "jsxFragmentFactory": "Fragment",
         "baseUrl": "./",
         "paths": {
             "@/*": [
