--- a/packages/index-app/package.json
+++ b/packages/index-app/package.json
@@ -20,11 +20,6 @@
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.10",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
-    "@types/antd": "^1.0.0",
-    "@types/jest": "^29.5.2",
-    "@types/lodash-es": "^4.17.7",
-    "@types/react": "^18.2.8",
-    "@types/react-dom": "^18.2.4",
     "@typescript-eslint/eslint-plugin": "^5.59.8",
     "@typescript-eslint/parser": "^5.59.8",
     "add-asset-html-webpack-plugin": "^6.0.0",
@@ -79,11 +74,13 @@
     "babel-plugin-react-css-modules": "^5.2.6",
     "classnames": "^2.3.2",
     "core-js": "3",
+    "dotenv": "^16.3.1",
     "emit": "^0.0.2",
     "glob": "^10.2.6",
     "immutable": "^4.3.2",
     "lodash-es": "^4.17.21",
     "nanoid": "^4.0.2",
+    "qiankun": "^2.10.13",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.2",
