--- a/packages/index-app/package.json
+++ b/packages/index-app/package.json
@@ -85,6 +85,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.11.2",
+    "shared": "workspace:^",
     "use-immer": "^0.9.0",
     "web-vitals": "^3.3.2"
   }
