--- a/packages/vue-app/package.json
+++ b/packages/vue-app/package.json
@@ -18,6 +18,7 @@
     "core-js": "^3.32.2",
     "dayjs": "^1.11.10",
     "qs": "^6.11.2",
+    "shared": "workspace:^",
     "uuid": "^9.0.1",
     "vee-validate": "^4.11.7",
     "vue": "^3.3.4",
